--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             <button class="button">Subject</button>
             <div class="dropdown-menu">
                 <a href="#" onclick="redirectWithAlert('https://teju0051.github.io/Software-testing/Entrepreneurship-Management.html')">Entrepreneurship Management</a>
+                <a href="#" onclick="redirectWithAlert('https://teju0051.github.io/Software-testing/C_Programming.html')">C Programming</a>
             </div>
         </div>
         <button class="button logout-button" onclick="window.location.href='https://t-service-india.vercel.app/login.html';">Logout</button>
