--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             background-color: #f5f5f7;
             color: #333;
             display: flex;
@@ -34,7 +34,12 @@
             z-index: 1000;
         }
 
-        .button {
+        .header-buttons {
+            display: flex;
+            gap: 1rem; /* Space between buttons */
+        }
+
+        .button, .dropdown {
             background: #f0f0f5;
             color: #333;
             border: none;
@@ -43,9 +48,10 @@
             font-size: 1rem;
             border-radius: 8px;
             transition: background-color 0.3s, box-shadow 0.3s;
+            position: relative; /* Added for dropdown positioning */
         }
 
-        .button:hover {
+        .button:hover, .dropdown:hover {
             background-color: #e2e2e8;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
         }
@@ -54,35 +60,20 @@
             color: #ff3b30;
         }
 
-        /* Dropdown Menu */
-        .dropdown {
-            position: relative;
-        }
-
-        .dropdown-menu {
-            display: none;
-            position: absolute;
-            top: 100%;
-            left: 0;
-            background-color: #fff;
+        /* Dropdown Styles */
+        select {
+            border: none;
             border-radius: 8px;
-            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-            padding: 10px 0;
-            min-width: 200px;
+            padding: 0.6rem 1.2rem;
+            background: #f0f0f5;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background-color 0.3s, box-shadow 0.3s;
         }
 
-        .dropdown-menu a {
-            display: block;
-            padding: 10px 20px;
-            color: #333;
-            font-size: 0.95rem;
-            text-decoration: none;
-            transition: background-color 0.3s;
-        }
-
-        .dropdown:hover .dropdown-menu {
-            display: block;
+        select:hover {
+            background-color: #e2e2e8;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
         }
 
         /* Main Content */
@@ -125,34 +116,38 @@
                 flex-direction: column;
             }
 
-            .dropdown-menu {
-                position: static;
-                width: 100%;
-                margin-top: 5px;
-                border-radius: 0;
-                box-shadow: none;
+            select {
+                width: 100%; /* Make select full width on mobile */
             }
         }
     </style>
     <script>
         function redirectWithAlert(url) {
-            alert("You are being redirected to a page that does not support mobile devices. If you are using mobile device, Please switch to a PC or laptop for an optimal viewing experience.");
+            alert("You are being redirected to a page that does not support mobile devices. If you are using a mobile device, please switch to a PC or laptop for an optimal viewing experience.");
             window.location.href = url;
+        }
+
+        function handleSelectionChange(event) {
+            const url = event.target.value;
+            if (url) {
+                redirectWithAlert(url);
+            }
         }
     </script>
 </head>
 <body>
     <!-- Header Section -->
     <header>
-        <div class="dropdown">
-            <button class="button">Subject</button>
-            <div class="dropdown-menu">
-                <a href="#" onclick="redirectWithAlert('https://teju0051.github.io/Software-testing/Entrepreneurship-Management.html')">Entrepreneurship Management</a>
-                <a href="#" onclick="redirectWithAlert('https://teju0051.github.io/Software-testing/C_Programming.html')">C Programming</a>
-                <a href="#" onclick="redirectWithAlert('#')">Cultural Activity</a>
-            </div>
+        <div class="header-buttons">
+            <select onchange="handleSelectionChange(event)">
+                <option value="">Select a Subject</option>
+                <option value="https://teju0051.github.io/Software-testing/Entrepreneurship-Management.html">Entrepreneurship Management</option>
+                <option value="https://teju0051.github.io/Software-testing/C_Programming.html">C Programming</option>
+                <option value="https://teju0051.github.io/Software-testing/Cultural-Activity.html">Cultural Activity</option>
+            </select>
+  
+            <button class="button logout-button" onclick="window.location.href='https://t-service-india.vercel.app/login.html';">Logout</button>
         </div>
-        <button class="button logout-button" onclick="window.location.href='https://t-service-india.vercel.app/login.html';">Logout</button>
     </header>
 
     <!-- Main Content Section -->
