--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="https://teju0051.github.io/Zen-Tech/favicon.ico">
     <title>Home</title>
     <style>
         /* Reset and Base Styles */
@@ -123,7 +124,7 @@
     </style>
     <script>
         function redirectWithAlert(url) {
-            alert("You are being redirected to a page that does not support mobile devices. If you are using a mobile device, please switch to a PC or laptop for an optimal viewing experience.");
+            alert("You are being redirected to a page that might not support mobile devices. If you are using a mobile device, please switch to a PC or laptop for an optimal viewing experience.");
             window.location.href = url;
         }
 
@@ -141,9 +142,9 @@
         <div class="header-buttons">
             <select onchange="handleSelectionChange(event)">
                 <option value="">Select a Subject</option>
-                <option value="https://teju0051.github.io/Software-testing/Entrepreneurship-Management.html">Entrepreneurship Management</option>
-                <option value="https://teju0051.github.io/Software-testing/C_Programming.html">C Programming</option>
-                <option value="https://teju0051.github.io/Software-testing/Cultural-Activity.html">Cultural Activity</option>
+                <option value="Entrepreneurship-Management.html">Entrepreneurship Management</option>
+                <option value="C_Programming.html">C Programming</option>
+                <option value="Cultural-Activity.html">Cultural Activity</option>
             </select>
   
             <button class="button logout-button" onclick="window.location.href='https://t-service-india.vercel.app/login.html';">Logout</button>
