--- a/Entrepreneurship-Management.html
+++ b/Entrepreneurship-Management.html
@@ -316,7 +316,7 @@
     <!-- Header Section -->
     <header>
         <div class="header-container">
-            <button class="subject-button" onclick="window.location.href='https://teju0051.github.io/Software-testing/';">Home</button>
+            <button class="subject-button" onclick="window.location.href='https://mgmfyit.vercel.app/';">Home</button>
            
             <button class="logout-button" onclick="window.location.href='https://t-service-india.vercel.app/login.html';">Logout</button>
         </div>
