--- a/Cultural-Activity.html
+++ b/Cultural-Activity.html
@@ -224,7 +224,7 @@
     <!-- Header Section -->
     <header>
       <div class="header-container">
-         <button class="subject-button" onclick="window.location.href='https://mgmfyit.vercel.app/';">Home</button
+         <button class="subject-button" onclick="window.location.href='https://mgmfyit.vercel.app/';">Home</button>
           <button class="subject-button" onclick="toggleNavbar()">Menu</button>
           <button class="logout-button" onclick="logout()">Logout</button>
       </div>
