--- a/Cultural-Activity.html
+++ b/Cultural-Activity.html
@@ -318,7 +318,7 @@
                     </tr>
                     <tr style="transition: background-color 0.3s;" onmouseover="this.style.backgroundColor='#f9f9f9'" onmouseout="this.style.backgroundColor='white'">
                         <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">2</td>
-                        <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">Sonu Yadav, Sujal Sandipog, Adarsh Mishra, Vishal Sable</td>
+                        <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">Sonu Yadav, Sujal Sandipog, Adarsh Mishra, Vishal Sable, Anuj Nichit</td>
                         <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">Classical Dance</td>
                     </tr>
                     <tr style="transition: background-color 0.3s;" onmouseover="this.style.backgroundColor='#f9f9f9'" onmouseout="this.style.backgroundColor='white'">
