--- a/Cultural-Activity.html
+++ b/Cultural-Activity.html
@@ -331,6 +331,11 @@
                         <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">Raj Mhatre, Prem Patil, Kaustubh Bhagat, Vinay Singh, Vivek Patil</td>
                         <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">Significance of Theatre</td>
                     </tr>
+                    <tr style="transition: background-color 0.3s;" onmouseover="this.style.backgroundColor='#f9f9f9'" onmouseout="this.style.backgroundColor='white'">
+                      <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">5</td>
+                      <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">Janvi, Kaveri T, Deepali, Gauri, Bhagyashri</td>
+                      <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">History of indian theatre, types and their uniqueness</td>
+                  </tr>
                 </tbody>
             </table>
             
