--- a/User-Agreement.html
+++ b/User-Agreement.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo Use Agreement - Zen-Tech</title>
+    <title>Photo Use Agreement - MGM College</title>
     <style>
         * {
             margin: 0;
@@ -154,8 +154,8 @@
         <form id="privacyForm">
             <!-- Group Name Input -->
             <div class="form-group">
-                <label for="groupName">Group Name/Number</label>
-                <input type="text" id="groupName" placeholder="Enter your group name" required>
+                <label for="groupName">Group Number</label>
+                <input type="text" id="groupName" placeholder="Enter your group number" required>
             </div>
 
             <!-- Members Input -->
