--- a/index.html
+++ b/index.html
@@ -123,25 +123,26 @@
         }
     </style>
     <script>
-        function redirectWithAlert(redirectUrl) {
-            alert("You are being redirected to a page that might not support mobile devices. If you are using a mobile device, please switch to a PC or laptop for an optimal viewing experience.");
-            window.location.href = redirectUrl;
+       window.onload = function() {
+    // Check the referrer (previous page)
+    const referrer = document.referrer;
+
+    // Ensure the referrer is the login page
+    if (referrer !== 'https://t-service-india.vercel.app/login.html') {
+        // If not, log out and redirect to the login page
+        alert('Authorization denied. Please relogin.');
+        sessionStorage.removeItem('authenticated');  // Log out the user by clearing session storage
+        window.location.href = 'https://t-service-india.vercel.app/login.html'; // Redirect to login
+    } else {
+        // If the user came from the correct login page, check if they are authenticated
+        const isAuthenticated = sessionStorage.getItem('authenticated');
+        if (!isAuthenticated) {
+            alert('Authorization denied. Please relogin.');
+            window.location.href = 'https://t-service-india.vercel.app/login.html';
         }
-        
-        function handleSelectionChange(event) {
-            const selectedValue = event.target.value;
-            if (selectedValue) {
-                redirectWithAlert(selectedValue);
-            }
-        }
-        
-        window.onload = function() {
-            const referrer = document.referrer;
-            if (!referrer.includes("https://t-service-india.vercel.app/login.html")) {
-                alert('Authorization denied. Please relogin.');
-                window.location.href = 'https://t-service-india.vercel.app/login.html';
-            }
-        };
+    }
+};
+
             </script>
 </head>
 <body>
