--- a/index.html
+++ b/index.html
@@ -141,9 +141,12 @@
         <div class="header-buttons">
             <select onchange="handleSelectionChange(event)">
                 <option value="">Select a Subject</option>
-                <option value="Entrepreneurship-Management.html">Entrepreneurship Management</option>
                 <option value="C_Programming.html">C Programming</option>
+                <option value="Communication-Skill.html">Communication Skill</option>
                 <option value="Cultural-Activity.html">Cultural Activity</option>
+                <option value="Entrepreneurship-Management.html">Entrepreneurship Management</option>
+               
+               
             </select>
   
             <button class="button logout-button" onclick="window.location.href='https://t-service-india.vercel.app/login.html';">Logout</button>
