--- a/Cultural-Activity.html
+++ b/Cultural-Activity.html
@@ -301,43 +301,8 @@
               break;
           case 'announcements':
               contentArea.innerHTML = `
-              <h1 style="text-align:center;">FY_IT_Cultural_Activity_UT-4</h1>
-              <table style="width: 100%; border-collapse: collapse; margin: 20px 0; font-family: Arial, sans-serif; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);">
-                <thead>
-                    <tr style="background-color: #f2f2f2;">
-                        <th style="border: 1px solid #ddd; padding: 12px; text-align: left; font-weight: bold; color: #333;">Group Number</th>
-                        <th style="border: 1px solid #ddd; padding: 12px; text-align: left; font-weight: bold; color: #333;">Members Name</th>
-                        <th style="border: 1px solid #ddd; padding: 12px; text-align: left; font-weight: bold; color: #333;">Topic Selected</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr style="transition: background-color 0.3s;" onmouseover="this.style.backgroundColor='#f9f9f9'" onmouseout="this.style.backgroundColor='white'">
-                        <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">1</td>
-                        <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">Shivangi Soni, Sapna Shah, Aarti Mishra, Shravni Khavale</td>
-                        <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">TBA</td>
-                    </tr>
-                    <tr style="transition: background-color 0.3s;" onmouseover="this.style.backgroundColor='#f9f9f9'" onmouseout="this.style.backgroundColor='white'">
-                        <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">2</td>
-                        <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">Sonu Yadav, Sujal Sandipog, Adarsh Mishra, Vishal Sable, Anuj Nichit</td>
-                        <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">Classical Dance</td>
-                    </tr>
-                    <tr style="transition: background-color 0.3s;" onmouseover="this.style.backgroundColor='#f9f9f9'" onmouseout="this.style.backgroundColor='white'">
-                        <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">3</td>
-                        <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">Abhishek Yadav, Tushar Yadav, Satyam Yadav, Shivam Yadav</td>
-                        <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">History of Indian Music</td>
-                    </tr>
-                    <tr style="transition: background-color 0.3s;" onmouseover="this.style.backgroundColor='#f9f9f9'" onmouseout="this.style.backgroundColor='white'">
-                        <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">4</td>
-                        <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">Raj Mhatre, Prem Patil, Kaustubh Bhagat, Vinay Singh, Vivek Patil</td>
-                        <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">Significance of Theatre</td>
-                    </tr>
-                    <tr style="transition: background-color 0.3s;" onmouseover="this.style.backgroundColor='#f9f9f9'" onmouseout="this.style.backgroundColor='white'">
-                      <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">5</td>
-                      <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">Janvi, Kaveri T, Deepali, Gauri, Bhagyashri</td>
-                      <td style="border: 1px solid #ddd; padding: 12px; text-align: left;">History of indian theatre, types and their uniqueness</td>
-                  </tr>
-                </tbody>
-            </table>
+              <h1 style="text-align:center;">Announcement</h1>
+<p>No Announcement yet. </p>
             
             
               `;
