--- a/index.html
+++ b/index.html
@@ -6,183 +6,190 @@
     <link rel="icon" type="image/x-icon" href="https://teju0051.github.io/Zen-Tech/favicon.ico">
     <title>Dashboard</title>
     <style>
-        /* Reset and Base Styles */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+   /* Reset and Base Styles */
+   * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f4f5f7;
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            line-height: 1.6;
-        }
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #e8eaf6;
+    color: #333;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    line-height: 1.6;
+}
 
-        /* Header Styles */
-        header {
-            background: linear-gradient(135deg, #5a5a85, #3a3a5a);
-            padding: 1.5rem 2rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border-bottom: 2px solid #676793;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-        }
 
-        .header-buttons {
-            display: flex;
-            gap: 1.2rem;
-        }
+header {
+    background: #e8eaf6;
+    padding: 1.5rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 2px solid #673ab7;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+}
 
-        .button, select {
-            background: #6b6b95;
-            color: #ffffff;
-            border: none;
-            padding: 0.6rem 1.3rem;
-            font-size: 1rem;
-            border-radius: 6px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.15);
-        }
+.header-buttons {
+    display: flex;
+    gap: 1.2rem;
+}
 
-        .button:hover, select:hover {
-            background-color: #4c4c72;
-            box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
-        }
+.button, select {
+    background: #673ab7;
+    color: #ffffff;
+    border: none;
+    padding: 0.6rem 1.3rem;
+    font-size: 1rem;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.15);
+}
 
-        .logout-button {
-            color: #ff6666;
-            background: #6b6b95;
-        }
+.button:hover, select:hover {
+    background-color: #4527a0;
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+}
 
-        /* Dropdown Styles */
-        select {
-            outline: none;
-            appearance: none;
-            background: #6b6b95;
-        }
+.logout-button {
+    color: #ff6666;
+    background: #673ab7;
+}
 
-        /* Main Content */
-        .main-content {
-            flex: 1;
-            padding: 3rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: #f9f9fc;
-        }
+/* Dropdown Styles */
+select {
+    outline: none;
+    appearance: none;
+    background: #673ab7;
+}
 
-        .main-content .welcome-card {
-            background: #fff;
-            padding: 2rem;
-            border-radius: 12px;
-            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
-            text-align: center;
-            color: #333;
-        }
+/* Main Content */
+.main-content {
+    flex: 1;
+    padding: 10rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #f9f9fc;
+}
 
-        .welcome-card h2 {
-            font-size: 2rem;
-            font-weight: 500;
-            color: #4a4a75;
-            margin-bottom: 1.2rem;
-        }
+.main-content .welcome-card {
+    background: #fff;
+    padding: 2rem;
+    border-radius: 12px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
+    max-width: 500px;
+    text-align: center;
+    color: #333;
+}
 
-        .welcome-card p {
-            font-size: 1rem;
-            color: #666;
-        }
+.welcome-card h2 {
+    font-size: 2rem;
+    font-weight: 500;
+    color: #4a4a75;
+    margin-bottom: 1.2rem;
+}
 
-        /* Footer */
-        footer {
-            background: linear-gradient(135deg, #5a5a85, #3a3a5a);
-            color: #c0c0d1;
-            text-align: center;
-            padding: 1.2rem;
-            font-size: 0.85rem;
-            border-top: 2px solid #676793;
-        }
+.welcome-card p {
+    font-size: 1rem;
+    color: #666;
+}
 
-        footer a {
-            color: #a0e6ff;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
+/* Footer */
+footer {
+  background: #e8eaf6;
+  color: #333;
+  text-align: center;
+  padding: 1.2rem;
+  font-size: 0.85rem;
+  border-top: 2px solid #673ab7;
+  margin-top: auto; /* Push footer to the bottom */
+}
 
-        footer a:hover {
-            color: #00c0ff;
-            text-decoration: underline;
-        }
+footer a {
+  color: #673ab7;
+  text-decoration: none;
+  transition: color 0.3s;
+}
 
-        /* Mobile Styles */
-        @media (max-width: 768px) {
-            header {
-                flex-direction: column;
-                gap: 0.8rem;
-                padding: 1.2rem;
-            }
+footer a:hover {
+  color: #4527a0;
+  text-decoration: underline;
+}
 
-            select {
-                width: 100%;
-            }
+/* Mobile Styles */
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+        gap: 0.8rem;
+        padding: 1.2rem;
+    }
 
-            .header-buttons {
-                flex-direction: column;
-                gap: 0.8rem;
-            }
-        }
+    select {
+        width: 100%;
+    }
+
+    .header-buttons {
+        flex-direction: column;
+        gap: 0.8rem;
+    }
+}
+.logo {
+  width: 150px; /* Adjust size as needed */
+  margin-bottom: 20px; /* Space between logo and heading */
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
     </style>
-    <script> 
-        function redirectWithAlert(redirectUrl) {
-            alert("You are being redirected to a page that might not support mobile devices. If you are using a mobile device, please switch to a PC or laptop for an optimal viewing experience.");
-            window.location.href = redirectUrl;
-        }
-        
+    <script>
+     
         function handleSelectionChange(event) {
             const selectedValue = event.target.value;
             if (selectedValue) {
-                redirectWithAlert(selectedValue);
+                alert("For optimal viewing, we recommend using a PC or laptop. Some mobile devices may not offer the best experience.");
+                window.location.href = selectedValue;
             }
         }
     </script>
 </head>
 <body>
-    <!-- Header Section -->
-    <header>
-        <div class="header-buttons">
-            <select onchange="handleSelectionChange(event)">
-                <option value="">Select a Subject</option>
-                <option value="C_Programming.html">C Programming</option>
-                <option value="Communication-Skill.html">Communication Skill</option>
-                <option value="Cultural-Activity.html">Cultural Activity</option>
-                <option value="Entrepreneurship-Management.html">Entrepreneurship Management</option>
-            </select>
   
-            <button class="button logout-button" onclick="window.location.href='https://t-service-india.vercel.app/login.html';">Logout</button>
-        </div>
-    </header>
 
-    <!-- Main Content Section -->
-    <div class="main-content">
-        <div class="welcome-card">
-            <h2>Welcome!</h2>
-            <p>Please select a subject to continue.</p>
+    <!-- Main Content Section (Hidden by Default) -->
+    <div class="content">
+        <!-- Header Section -->
+        <header>
+            <div class="header-buttons">
+                <select onchange="handleSelectionChange(event)">
+                    <option value="">Select a Subject</option>
+                    <option value="C_Programming.html">C Programming</option>
+                    <option value="Communication-Skill.html">Communication Skill</option>
+                    <option value="Cultural-Activity.html">Cultural Activity</option>
+                    <option value="Entrepreneurship-Management.html">Entrepreneurship Management</option>
+                </select>
+                <button class="button logout-button" onclick="window.location.href='https://mgmfyit.vercel.app/login.html';">Logout</button>
+            </div>
+        </header>
+
+        <!-- Main Content -->
+        <div class="main-content">
+            <div class="welcome-card">
+                <h2>Welcome!</h2>
+                <p>Please select a subject to continue.</p>
+            </div>
         </div>
+
+        <!-- Footer Section -->
+        <footer>
+            <p>&copy; 2024 | Designed and Developed by <a href="https://zen-tech.vercel.app/" target="_blank">Zen-Tech</a></p>
+        </footer>
     </div>
-
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2024 | Designed and Developed by <a href="https://zen-tech.vercel.app/" target="_blank">Zen-Tech</a></p>
-    </footer>
 </body>
 </html>
