--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
+            overflow-x:hidden;
             line-height: 1.6;
         }
 
