--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             padding: 0;
             box-sizing: border-box;
         }
-
+ html{
+ overflow-x: hidden;
+}
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #e8eaf6;
@@ -20,7 +22,7 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
-            overflow-x:hidden;
+           overflow-x: hidden;
             line-height: 1.6;
         }
 
