--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
             padding: 0;
             box-sizing: border-box;
         }
- html{
- overflow-x: hidden;
-}
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #e8eaf6;
@@ -22,7 +20,8 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
-           overflow-x: hidden;
+            overflow-x:hidden;
+            transform: scale(0.99);
             line-height: 1.6;
         }
 
