--- a/Entrepreneurship-Management.html
+++ b/Entrepreneurship-Management.html
@@ -226,8 +226,9 @@
         <div class="header-container">
             <button class="subject-button" onclick="window.location.href='https://mgmfyit.vercel.app/';">Home</button>
             <button class="subject-button" onclick="toggleNavbar()">Menu</button>
-            <button class="logout-button" onclick="window.location.href='https://t-service-india.vercel.app/login.html';">Logout</button>
-        </div>
+
+       <button class="logout-button"  onclick="logout()">Logout</button>
+   </div>
     </header>
 
     <!-- Main Content Section -->
@@ -344,6 +345,13 @@
             const navbar = document.getElementById("verticalNavbar");
             navbar.style.display = (navbar.style.display === "none" || navbar.style.display === "") ? "flex" : "none";
         }
+
+ // Logout function to clear the token and redirect to login page
+      function logout() {
+          localStorage.removeItem("authToken"); // Clear the token
+          window.location.href = "/login.html"; // Redirect to login page
+      }
+
     </script>
 </body>
 </html>
