--- a/C_Programming.html
+++ b/C_Programming.html
@@ -227,7 +227,8 @@
               <button class="subject-button" onclick="window.location.href='https://mgmfyit.vercel.app/';">Home</button>
               <button class="subject-button" onclick="toggleNavbar()">Menu</button>
            
-            <button class="logout-button" onclick="window.location.href='https://t-service-india.vercel.app/login.html';">Logout</button>
+             <button class="logout-button"  onclick="logout()">Logout</button>
+
         </div>
     </header>
 
@@ -283,11 +284,7 @@
             });
         });
 
-        // Placeholder logout function
-        function logout() {
-            window.location.href = "https://zen-tech.vercel.app/";
-        }
-
+     
         // Updated navigation function to handle new section names
         function navigateTo(section) {
             const contentArea = document.getElementById("contentArea");
@@ -344,6 +341,11 @@
             const navbar = document.getElementById("verticalNavbar");
             navbar.style.display = (navbar.style.display === "none" || navbar.style.display === "") ? "flex" : "none";
         }
+// Logout function to clear the token and redirect to login page
+      function logout() {
+          localStorage.removeItem("authToken"); // Clear the token
+          window.location.href = "/login.html"; // Redirect to login page
+      }
     </script>
 </body>
 </html>
