--- a/login.html
+++ b/login.html
@@ -146,6 +146,8 @@
               alert("Invalid username or password. Please try again.");
           }
       }
+
+      import { inject } from "@vercel/analytics"
   </script>
 </head>
 <body>
