--- a/login.html
+++ b/login.html
@@ -164,7 +164,10 @@
      
   </script>
 <script>
-import { inject } from "@vercel/analytics"
+
+import { inject } from "@vercel/analytics";
+inject();
+
 </sscript>
 </body>
 </html>
