--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
-            overflow-x:hidden;
-          
+            overflow-x: hidden;
             line-height: 1.6;
         }
 
@@ -31,9 +30,10 @@
             flex-direction: column;
         }
 
+        /* Header Section */
         header {
-            background: #e8eaf6;
-            padding: 0.9rem;
+            background: #ffffff;
+            padding: 1rem 2rem;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -43,7 +43,7 @@
 
         .header-buttons {
             display: flex;
-            gap: 1.2rem;
+            gap: 1.5rem;
         }
 
         .button, select {
@@ -68,17 +68,60 @@
             background: #673ab7;
         }
 
-        /* Dropdown Styles */
         select {
             outline: none;
             appearance: none;
             background: #673ab7;
         }
 
+        .header-name {
+            font-size: 1.1rem;
+            font-weight: bold;
+            color: #4a4a75;
+        }
+
+        .info-icon {
+            margin-left: 8px;
+            cursor: pointer;
+            background-color: #ffffff;
+            color: #673ab7;
+            font-size: 0.9rem;
+            width: 20px;
+            height: 20px;
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            font-weight: bold;
+        }
+
+        .tooltip {
+            visibility: hidden;
+            width: 300px;
+            background-color: #333;
+            color: #ffffff;
+            text-align: center;
+            border-radius: 5px;
+            padding: 8px;
+            position: absolute;
+            top: 30px;
+            left: 50%;
+            transform: translateX(-50%);
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            z-index: 1;
+        }
+
+        .info-icon:hover + .tooltip {
+            visibility: visible;
+            opacity: 1;
+        }
+
         /* Main Content */
         .main-content {
             flex: 1;
-            padding: 10rem;
+            padding: 5rem 2rem;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -107,14 +150,15 @@
             color: #666;
         }
 
-        /* Footer */
+        /* Footer Section */
         footer {
-            background: #e8eaf6;
+            background: #ffffff;
             color: #333;
             text-align: center;
-            padding: 0.9rem;
+            padding: 1rem;
             font-size: 0.85rem;
             border-top: 2px solid #673ab7;
+            box-shadow: 0px -4px 12px rgba(0, 0, 0, 0.1);
         }
 
         footer a {
@@ -132,8 +176,8 @@
         @media (max-width: 768px) {
             header {
                 flex-direction: column;
-                gap: 0.8rem;
-                padding: 1.2rem;
+                gap: 1rem;
+                padding: 1.5rem;
             }
 
             select {
@@ -142,59 +186,9 @@
 
             .header-buttons {
                 flex-direction: column;
-                gap: 0.8rem;
+                gap: 1rem;
             }
         }
-
-        .logo {
-            width: 150px; /* Adjust size as needed */
-            margin-bottom: 20px; /* Space between logo and heading */
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        .header-name {
-          font-size: 1rem;
-          font-weight: bold;
-      }
-      .info-icon {
-        margin-left: 8px;
-        cursor: pointer;
-        background-color: #ffffff;
-        color: #673ab7;
-        font-size: 0.8rem;
-        width: 18px;
-        height: 18px;
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 50%;
-        font-weight: bold;
-    }
-
-    .tooltip {
-        visibility: hidden;
-        width: 300px;
-        background-color: #333;
-        color: #ffffff;
-        text-align: center;
-        border-radius: 5px;
-        padding: 8px;
-        position: absolute;
-        top: 30px;
-        left: 50%;
-        transform: translateX(-50%);
-        box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-        opacity: 0;
-        transition: opacity 0.3s ease;
-        z-index: 1;
-    }
-
-    .info-icon:hover + .tooltip {
-        visibility: visible;
-        opacity: 1;
-    }
-
     </style>
     <script>
         function handleSelectionChange(event) {
@@ -208,29 +202,28 @@
 </head>
 <body>
 
-    <!-- Wrapper to ensure footer is at the bottom -->
     <div class="wrapper">
-<!-- Header Section -->
-<header>
-  <div class="header-buttons">
-      <select onchange="handleSelectionChange(event)">
-          <option value="">Select a Subject</option>
-          <option value="C_Programming.html">C Programming</option>
-          <option value="Communication-Skill.html">Communication Skill</option>
-          <option value="Cultural-Activity.html">Cultural Activity</option>
-          <option value="Entrepreneurship-Management.html">Entrepreneurship Management</option>
-      </select>
-      <button class="button logout-button" onclick="logout()">Logout</button>
-  </div>
-  <div class="header-name">
-      <p>Manager: Prajakta Mane 
-          <span class="info-icon">?</span>
-          <span class="tooltip">They are staff of Zen-Tech. To contact the manager, mail to zentechindiaofficial@proton.me with secret code: #PM01IT, and our staff will notify your manager directly!</span>
-      </p>
-  </div>
-</header>
 
-<marquee>This is a testing enviroment hence the is the preview of the software if any changes you think should be made kindly contact your manager</marquee>
+        <!-- Header Section -->
+        <header>
+            <div class="header-buttons">
+                <select onchange="handleSelectionChange(event)">
+                    <option value="">Select a Subject</option>
+                    <option value="C_Programming.html">C Programming</option>
+                    <option value="Communication-Skill.html">Communication Skill</option>
+                    <option value="Cultural-Activity.html">Cultural Activity</option>
+                    <option value="Entrepreneurship-Management.html">Entrepreneurship Management</option>
+                </select>
+                <button class="button logout-button" onclick="logout()">Logout</button>
+            </div>
+            <div class="header-name">
+                <p>Manager: Prajakta Mane 
+                    <span class="info-icon">?</span>
+                    <span class="tooltip">They are staff of Zen-Tech. To contact the manager, mail to zentechindiaofficial@proton.me with secret code: #PM01IT, and our staff will notify your manager directly!</span>
+                </p>
+            </div>
+        </header>
+
         <!-- Main Content -->
         <div class="main-content">
             <div class="welcome-card">
@@ -238,64 +231,32 @@
                 <p>Please select a subject to continue.</p>
             </div>
         </div>
+
     </div>
 
-
-   <!-- Footer Section -->
-<footer>
-  <p>&copy; 2024 | Designed and Developed by <a href="https://zen-tech.vercel.app/" target="_blank">Zen-Tech</a>
-  </p>
-</footer>
-
-</div>
+    <footer>
+        <p>2024 &copy; MGMCCSIT | Designed & Developed by <a href="https://zen-tech.vercel.app/"> Zen-Tech</a> | Version: 1.21.1</p>
+    </footer>
 
     <script>
-      function handleSelectionChange(event) {
-          const selectedValue = event.target.value;
-          if (selectedValue) {
-              alert("For optimal viewing, we recommend using a PC or laptop. Some mobile devices may not offer the best experience.");
-              window.location.href = selectedValue;
-          }
-      }
+        // Logout function to clear the token and redirect to login page
+        function logout() {
+            localStorage.removeItem("authToken"); // Clear the token
+            window.location.href = "/login.html"; // Redirect to login page
+        }
 
-            // Check if the user is logged in (token present in localStorage)
+                // Check if the user is logged in (token present in localStorage)
     if (!localStorage.getItem("authToken")) {
       window.location.href = "/login.html"; // Redirect to login if no token
   }
 
 
-      // Logout function to clear the token and redirect to login page
-      function logout() {
-          localStorage.removeItem("authToken"); // Clear the token
-          window.location.href = "/login.html"; // Redirect to login page
-      }
+    
+    </script>
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 
- 
-  </script>
-
-  <script>
-        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
-      </script>
-      <script defer src="/_vercel/insights/script.js"></script>
-      <script>
-        // Function to display the popup
-function showPopup() {
-  document.getElementById("termsPopup").style.display = "block";
-}
-
-// Function to close the popup
-function closePopup() {
-  document.getElementById("termsPopup").style.display = "none";
-}
-
-// Close the popup if the user clicks anywhere outside the modal
-window.onclick = function(event) {
-  var modal = document.getElementById("termsPopup");
-  if (event.target === modal) {
-      modal.style.display = "none";
-  }
-}
-
-      </script>
 </body>
 </html>
