--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     </div>
 
     <footer>
-        <p>2024 &copy; MGMCCSIT | Designed & Developed by <a href="https://zen-tech.vercel.app/"> Zen-Tech</a> | Version: 1.21.1</p>
+        <p>2024 &copy; MGM_FY-IT | Designed & Developed by <a href="https://zen-tech.vercel.app/"> Zen-Tech</a> | Version: 1.23.1</p>
     </footer>
 
     <script>
