--- a/login.html
+++ b/login.html
@@ -298,7 +298,7 @@
           const password = document.getElementById("password").value; // Corrected this line
   
           // Check if username and password are correct
-          if (username === "1" && password === "1") {
+          if (username === "mgmfyit" && password === "Student") {
               const token = generateToken(username); // Generate token
               localStorage.setItem("authToken", token); // Store token in localStorage
               window.location.href = "https://mgmfyit.vercel.app/"; // Redirect to main page
