--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ window.onload = function() {
             <div class="header-buttons">
                 <select onchange="handleSelectionChange(event)">
                     <option value="">Select a Subject</option>
-                    <option value="C_Programming.html">C Programming</option>
+                    <option value="Cpp.html">C++</option>
                     <option value="Communication-Skill.html">Communication Skill</option>
                     <option value="Cultural-Activity.html">Cultural Activity</option>
      
