--- a/Cultural-Activity.html
+++ b/Cultural-Activity.html
@@ -369,11 +369,22 @@ window.onload = function() {
       const navbar = document.getElementById("verticalNavbar");
       navbar.style.display = (navbar.style.display === "none" || navbar.style.display === "") ? "flex" : "none";
   }
-// Logout function to clear the token and redirect to login page
-      function logout() {
-          localStorage.removeItem("authToken"); // Clear the token
-          window.location.href = "/login.html"; // Redirect to login page
-      }
+
 </script>
+  <script>
+        // Logout function to clear the token and redirect to login page
+        function logout() {
+            localStorage.removeItem("authToken"); // Clear the token
+            window.location.href = "/login.html"; // Redirect to login page
+        }
+
+            // Check if the user is logged in (token present in localStorage)
+            if (!localStorage.getItem("authToken")) {
+                window.location.href = "/login.html"; // Redirect to login if no token
+            }
+          
+
+    
+    </script>
 </body>
 </html>
