--- a/Cpp.html
+++ b/Cpp.html
@@ -358,7 +358,7 @@
             <div class="faculty-section">
               
                 <div class="faculty-details">
-                    <div class="name">Hi There! Please Select any options on left side to continue.</div>
+                    <div class="name">Hi There! Please Select any options at bottom to continue.</div>
                    
                 </div>
             </div>
